--- a/index--4 sites.html
+++ b/index--4 sites.html
@@ -7,12 +7,12 @@
       body {
         font-family: Oxygen;
         color: white;
-        font-size: 100px;
+        font-size: 280%;
       }
 
       .split {
         height: 50%;
-        width: 25%;
+        width: 50%;
         position: fixed;
         z-index: 1;
         overflow-x: hidden;
@@ -52,10 +52,10 @@
       .topleft {
         left: 0;
         top: 0;
-        background-color: #e6194b;
+        background-color: blue;
       }
 
-      .topmidL {
+      /* .topmidL {
         left: 25%;
         top: 0;
         background-color: #3cb44b;
@@ -65,7 +65,7 @@
         right: 25%;
         top: 0;
         background-color: #c34bb4;
-      }
+      } */
 
       .topright {
         right: 0;
@@ -76,10 +76,10 @@
       .botleft {
         left: 0;
         bottom: 0;
-        background-color: #0082c8;
+        background-color: green;
       }
 
-      .botmidL {
+      /* .botmidL {
         left: 25%;
         bottom: 0;
         background-color: #f58231;
@@ -89,12 +89,12 @@
         right: 25%;
         bottom: 0;
         background-color: #5f2813;
-      }
+      } */
 
       .botright {
         right: 0;
         bottom: 0;
-        background-color: #911eb4;
+        background-color: red;
       }
 
       .centered {
@@ -127,7 +127,7 @@
     <span id="myspan"></span>
     <!-- six divs, each for a website -->
     <!-- top left -->
-    <div class="split topleft">
+    <!-- <div class="split topleft">
       <div class="overlay">
 
       </div>
@@ -137,9 +137,9 @@
       <div class="mousezone" onclick="window.location='http://www.radiokorea.com/';" onmouseover="playSound('radio.mp3')">
 
       </div>
-    </div>
-    <!-- top middle -->
-    <div class="split topmidL">
+    </div> -->
+    <!-- top left -->
+    <div class="split topleft">
       <div class="overlay">
 
       </div>
@@ -151,7 +151,7 @@
       </div>
     </div>
     <!-- top right -->
-    <div class="split topmidR">
+    <!-- <div class="split topmidR">
       <div class="overlay">
 
       </div>
@@ -161,14 +161,14 @@
       <div class="mousezone" onclick="window.location='https://www.youtube.com/watch?v=JhDIILjlhBQ';" onmouseover="playSound('music.mp3')">
 
       </div>
-    </div>
+    </div> -->
     <!-- top right -->
     <div class="split topright">
       <div class="overlay">
 
       </div>
       <div class="centered">
-        <h1>YOUTUBE</h1>
+        <h1>MUSIC</h1>
       </div>
       <div class="mousezone" onclick="window.location='https://www.youtube.com/';" onmouseover="playSound('music.mp3')">
 
@@ -187,7 +187,7 @@
       </div>
     </div>
     <!-- bottom middle left -->
-    <div class="split botmidL">
+    <!-- <div class="split botmidL">
       <div class="overlay">
 
       </div>
@@ -197,9 +197,9 @@
       <div class="mousezone" onclick="window.location='https://www.ufotv.com/';" onmouseover="playSound('ufotv.mp3')">
 
       </div>
-    </div>
+    </div> -->
     <!-- bottom middle right -->
-    <div class="split botmidR">
+    <!-- <div class="split botmidR">
       <div class="overlay">
 
       </div>
@@ -209,16 +209,16 @@
       <div class="mousezone" onclick="window.location='https://www.cnn.com/';" onmouseover="playSound('cnn.mp3')">
 
       </div>
-    </div>
+    </div> -->
     <!-- bottom right -->
     <div class="split botright">
       <div class="overlay">
 
       </div>
       <div class="centered">
-        <h1>NIKE</h1>
+        <h1>CNN</h1>
       </div>
-      <div class="mousezone" onclick="window.location='https://www.nike.com/';" onmouseover="playSound('cnn.mp3')">
+      <div class="mousezone" onclick="window.location='https://www.cnn.com/';" onmouseover="playSound('cnn.mp3')">
 
       </div>
     </div>
