Upload edited index.html file
Changed the links connected to each square on the website

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="centered">
         <h1>MUSIC</h1>
       </div>
-      <div class="mousezone" onclick="window.location='https://www.youtube.com/';" onmouseover="playSound('music.mp3')">
+      <div class="mousezone" onclick="window.location='https://www.youtube.com/watch?v=jgpJVI3tDbY';" onmouseover="playSound('music.mp3')">
 
       </div>
     </div>
@@ -182,7 +182,7 @@
       <div class="centered">
         <h1>SCIENCE</h1>
       </div>
-      <div class="mousezone" onclick="window.location='http://www.sciencemag.org/';" onmouseover="playSound('science.mp3')">
+      <div class="mousezone" onclick="window.location='https://www.youtube.com/watch?v=tmWV5ZnKOAg';" onmouseover="playSound('science.mp3')">
 
       </div>
     </div>
