--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <div class="centered">
         <h1>C3TV</h1>
       </div>
-      <div class="mousezone" onclick="window.location='google.com';" onmouseover="playSound('c3tv.mp3')">
+      <div class="mousezone" onclick="window.location='http://main.goodtv.co.kr/live.asp';" onmouseover="playSound('c3tv.mp3')">
 
       </div>
     </div>
