--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       .topleft {
         left: 0;
         top: 0;
-        background-color: violet;
+        background-color: white;
       }
 
       .topmid {
