--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
 
       </div>
       <div class="centered">
-        <h1>YOUTUBE</h1>
+        <h1>NEWS</h1>
       </div>
-      <div class="mousezone" onclick="window.location='https://www.youtube.com/';" onmouseover="playSound('youtube.mp3')">
+      <div class="mousezone" onclick="window.location='https://www.youtube.com/watch?v=XJ1TF9ViJ5I';" onmouseover="playSound('youtube.mp3')">
 
       </div>
     </div>
