Add new index file
Index changed -- links updated for science, music, news

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="centered">
         <h1>MUSIC</h1>
       </div>
-      <div class="mousezone" onclick="window.location='https://www.youtube.com/watch?v=jgpJVI3tDbY';" onmouseover="playSound('music.mp3')">
+      <div class="mousezone" onclick="window.location='https://www.youtube.com/watch?v=5VB1RvyfISM';" onmouseover="playSound('music.mp3')">
 
       </div>
     </div>
@@ -182,7 +182,7 @@
       <div class="centered">
         <h1>SCIENCE</h1>
       </div>
-      <div class="mousezone" onclick="window.location='https://www.youtube.com/watch?v=tmWV5ZnKOAg';" onmouseover="playSound('science.mp3')">
+      <div class="mousezone" onclick="window.location='https://www.youtube.com/watch?v=hSopfxG9pEk&list=PL39_ud5aKSvkl_wj5BIkRvANCiiUPL3VS&index=1';" onmouseover="playSound('science.mp3')">
 
       </div>
     </div>
@@ -194,7 +194,7 @@
       <div class="centered">
         <h1>NEWS</h1>
       </div>
-      <div class="mousezone" onclick="window.location='https://www.youtube.com/watch?v=XJ1TF9ViJ5I';" onmouseover="playSound('youtube.mp3')">
+      <div class="mousezone" onclick="window.location='http://mylatest.video/JTBC10News';" onmouseover="playSound('youtube.mp3')">
 
       </div>
     </div>
